<resources>
    <string name="app_name">RChat</string>

    <!--  Button  -->
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!--  TextView  -->
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="rchat">RCHAT</string>

    <!--  Hint  -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--  Dialog  -->
    <string name="login_message">Enter your email and password</string>
    <string name="login_title">Log in</string>

</resources>
